--- a/dimension/views/account_move_line_views.xml
+++ b/dimension/views/account_move_line_views.xml
@@ -5,8 +5,9 @@
             <field name="model">account.move</field>
             <field name="inherit_id" ref="account.view_move_line_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='quantity']" position="after">
-                    <field name="dimension" readonly="1"/>
+                <xpath expr="//notebook/page[@name='invoice_lines']/field[@name='invoice_line_ids']/tree/field[@name='product_id']"
+                       position="after">
+                    <field name="dimension"/>
                 </xpath>
             </field>
         </record>
